2002-12-02	Joel Sherrill <joel@OARcorp.com>

	* src/dosfs/fat.h, src/dosfs/msdos.h: Added casts to remove warnings
	on 16 bit targets like the h8300.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Cosmetical fixes.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-10-02	Jennifer Averett <jennifer@OARcorp.com>

	* src/imfs/memfile.c: Fixed case where last close of unlinked file
	did not remove the resources associated with that file.  Reported
	by Till Straumann <strauman@slac.stanford.edu> on the mailing list.

2002-09-14	Joel Sherrill <joel@OARcorp.com>

	* src/dosfs/fat.c, src/imfs/deviceio.c, src/imfs/imfs.h,
	src/imfs/imfs_directory.c, src/imfs/imfs_fchmod.c,
	src/imfs/memfile.c: Eliminated warnings.  A lot of this focus
	was on changing read and write entry points to return ssize_t
	as read(2) and write(2) now do.

2002-07-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove.
	* wrapup/.cvsignore: Remove.
	* Makefile.am: Remove wrapup SUBDIR.
	* configure.ac: Remove wrapup/Makefile.

2002-07-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: RTEMS_TOP(../..).

2002-07-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_PROJECT_ROOT.

2002-06-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use AC_CONFIG_AUX_DIR(../..).
	Add AC_PROG_RANLIB.

2002-06-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't preinstall libfs.a.

2002-06-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/dosfs/Makefile.am: Include $(top_srcdir)/../automake/*.am.
	* src/Makefile.am: Include $(top_srcdir)/../automake/*.am.
	* src/imfs/Makefile.am: Include $(top_srcdir)/../automake/*.am.